<!--    ======================================================================================-->
<!--    Group 2 - Group Members:-->
<!--    ======================================================================================-->
<!--    * Chad Fairlie ST10269509-->
<!--    * Dhiren Ruthenavelu ST10256859-->
<!--    * Kayla Ferreira ST10259527-->
<!--    * Nathan Teixeira ST10249266-->
<!--    ======================================================================================-->
<!--    Declaration:-->
<!--    ======================================================================================-->
<!--    We declare that this work is our own original work and that no part of it has been-->
<!--    copied from any other source, except where explicitly acknowledged.-->
<!--    ======================================================================================-->
<!--    References:-->
<!--    ======================================================================================-->
<!--    * ChatGPT was used to help with the design and planning. As well as assisted with-->
<!--    finding and fixing errors in the code.-->
<!--    * ChatGPT also helped with the forming of comments for the code.-->
<!--    * https://www.youtube.com/watch?v=A_tPafV23DM&list=PLPgs125_L-X9H6J7x4beRU-AxJ4mXe5vX-->
<!--    ======================================================================================-->

<resources>

    <!-- ====================== Global Strings ====================== -->
    <string name="app_name">Budget Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Add Transaction</string>
    <string name="title_wallets">Wallets</string>
    <string name="title_budgets">Budgets</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="total_balance">Total Balance</string>
    <string name="spending_overview">Spending Overview</string>
    <string name="total_expense">Total Expense</string>
    <string name="labels">Labels</string>
    <!-- =========================================================== -->

    <!-- ============ Open, Sign In and Sign Up Strings ============-->
    <string name="signupText">SIGN UP</string>
    <string name="loginText">LOGIN</string>
    <string name="version_format">Version %1$s</string>
    <string name="googleSignUp">SIGN UP WITH GOOGLE</string>
    <string name="microsoftSignUp">SIGN UP WITH MIRCOSOFT</string>\
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="googleLogin">LOGIN WITH GOOGLE</string>
    <string name="microsoftLogin">LOGIN WITH MICROSOFT</string>
    <!-- =========================================================== -->

    <!-- ==================== Add Transactions ======================-->
    <string name="add_new_transaction">Add New Transaction</string>
    <string name="select_category">Select Category</string>
    <string name="wallet">Wallet</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="calender">Calender</string>
    <string name="note">Write a Note</string>
    <string name="event">Select Event</string>
    <string name="recurrence">Recurrence Rate</string>
    <string name="label">Label</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="add_photo">Add a Photo</string>
    <string name="select_currency">Select Currency</string>
    <string name="picture">Pictures</string>
    <!-- =========================================================== -->

    <!-- ==================== Categories ======================-->
    <string name="category">Category</string>
    <string name="transaction">Transactions</string>
    <string name="category_colour">Category colour</string>
    <string name="category_icon">Category Icon</string>

    <!-- Expenses -->
    <string name="expenses">Expenses</string>
    <string name="food">Food</string>
    <string name="entertainment">Entertainment</string>
    <string name="transport">Transport</string>
    <string name="shopping">Shopping</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="rentMortgage">Rent/Mortgage</string>">

    <!-- Income -->
    <string name="income">Income</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="investment">Investment</string>
    <string name="commission">Commission</string>">
    <string name="Overtime">Overtime</string>
    <string name="back">Back</string>
    <string name="date">Date</string>
    <string name="write_a_note">Write a Note\n</string>">

    <!-- Budget Categories -->
    <string name="select_all">Select All</string>
    <string name="beauty">Beauty</string>
    <string name="bills_and_fees">Bills And Fees</string>
    <string name="cars">Cars</string>
    <string name="family_and_person">Family And Personal</string>
    <string name="food_and_drinks">Food And Drinks</string>
    <string name="gifts">Gifts</string>
    <string name="Groceries">Groceries</string>
    <string name="healthcare">HealthCare</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <!-- =========================================================== -->

    <!-- ==================== Home Page ======================-->
    <string name="my_wallet">My Wallets</string>
    <string name="see_all">See All</string>
    <string name="monthly_reports">Monthly Reports</string>
    <string name="see_reports">See Reports</string>
    <string name="spending_details">Spending Details</string>
    <string name="see_details">See Details</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="show_more">Show More</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <!-- =========================================================== -->

    <!-- ==================== Budget Page ======================-->
    <string name="add_new_budget">Add New Budget</string>
    <string name="budget_for">Budget for</string>
    <string name="start_date">Start Date</string>
    <string name="budget_name">Budget Name</string>
    <string name="budget_colour">Budget Colour</string>
    <string name="budget_icon">Budget Icon</string>
    <string name="total_budget">Total budget</string>
    <string name="total_spent">Total spent</string>
    <string name="end_of_month">End of Month</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- =========================================================== -->

    <string name="category_created_success">Category Created Successfully!</string>
    <string name="category_creation_error">Please enter a name and choose an icon and color</string>
    <string name="no_categories_found">No Categories Found</string>
    <string name="no_wallets_found">No Wallets Found\n</string>
    <string name="no_transactions_found">No Transactions Found</string>
    <string name="no_expense_categories_found">No Expense Categories Found</string>

</resources>