<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bb_background"
    android:padding="16dp">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnGoBack"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/bb_primaryText" />

    <LinearLayout
        android:id="@+id/rowSelectCategory"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoBack">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/select_all"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowBeauty"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowSelectCategory">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_content_cut_24"
            app:tint="?attr/bb_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/beauty"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxBeauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowBillsAndFees"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowBeauty">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/ic_attach_money_24"
            app:tint="@color/cat_dark_green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/bills_and_fees"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxBillsAndFees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowCars"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowBillsAndFees">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_directions_car_24"
            app:tint="@color/cat_dark_pink" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/cars"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBoxCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowEducation"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowCars">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_school_24"
            app:tint="@color/cat_yellow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/education"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowEntertainment"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowEducation">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_theater_comedy_24"
            app:tint="@color/cat_dark_purple" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/entertainment"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFamilyAndPerson"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowEntertainment">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_people_alt_24"
            app:tint="@color/cat_dark_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/family_and_person"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkFamilyAndPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFoodAndDrinks"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowFamilyAndPerson">

        <ImageView
            style="@style/RowIconStyle"
            android:layout_width="wrap_content"
            android:src="@drawable/baseline_fastfood_24"
            app:tint="@color/cat_light_pink"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/food_and_drinks"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkFoodAndDrinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowGifts"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowFoodAndDrinks">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_card_giftcard_24"
            app:tint="@color/cat_orange" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/gifts"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkGifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowGroceries"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowGifts">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_shopping_bag_24"
            app:tint="@color/cat_light_green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Groceries"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkGroceries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowHealthCare"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowGroceries">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_health_and_safety_24"
            app:tint="@color/cat_gold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/healthcare"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkHealthCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowHome"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowHealthCare">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_home_24"
            app:tint="@color/cat_light_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/home"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowOther"
        style="@style/RowStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowHome">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/bg_rounded_button"
            app:tint="@color/cat_light_purple"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/other"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>