<?xml version="1.0" encoding="utf-8"?>

<!--    ======================================================================================-->
<!--    Group 2 - Group Members:-->
<!--    ======================================================================================-->
<!--    * Chad Fairlie ST10269509-->
<!--    * Dhiren Ruthenavelu ST10256859-->
<!--    * Kayla Ferreira ST10259527-->
<!--    * Nathan Teixeira ST10249266-->
<!--    ======================================================================================-->
<!--    Declaration:-->
<!--    ======================================================================================-->
<!--    We declare that this work is our own original work and that no part of it has been-->
<!--    copied from any other source, except where explicitly acknowledged.-->
<!--    ======================================================================================-->
<!--    References:-->
<!--    ======================================================================================-->
<!--    * ChatGPT was used to help with the design and planning. As well as assisted with-->
<!--    finding and fixing errors in the code.-->
<!--    * ChatGPT also helped with the forming of comments for the code.-->
<!--    * https://www.youtube.com/watch?v=A_tPafV23DM&list=PLPgs125_L-X9H6J7x4beRU-AxJ4mXe5vX-->
<!--    ======================================================================================-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_wallet_main"
        android:icon="@drawable/ic_wallet_24"
        android:title="@string/title_wallets" />

    <item
        android:id="@+id/navigation_budget_main"
        android:icon="@drawable/baseline_savings_24"
        android:title="@string/title_budgets" />

</menu>