<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bb_background"
    tools:context=".presentation.ui.auth.landing.LandingFragment">

    <TextView
        android:id="@+id/lblBuddyBuddy"
        android:layout_width="218dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/tilt_warp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?attr/bb_primaryText"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBuddy"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_budget_buddy_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBuddyBuddy" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="?attr/bb_button"
        android:text="@string/signupText"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBuddy" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="268dp"
        android:layout_height="68dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:text="@string/loginText"
        android:textColor="?attr/bb_accent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <TextView
        android:id="@+id/lblVersionOpenPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>