<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bb_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btnGoBack"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="?attr/actionModeCloseDrawable"
            android:background="@null"
            android:contentDescription="@string/back"
            app:tint="?attr/bb_primaryText" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose a Category"
            android:textColor="?attr/bb_primaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp" />

        <!-- Toggle Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/btnExpenseToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/expenses"
                android:textColor="?attr/bb_primaryText" />

            <TextView
                android:id="@+id/btnIncomeToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/toggle_selected"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/income"
                android:textColor="?attr/bb_primaryText" />
        </LinearLayout>

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewExpenseCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:visibility="visible"/>

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIncomeCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

    </LinearLayout>
</FrameLayout>
