<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.main.transactions.generalIndividualTransactions.GeneralIndividualTransactionsFragment"
    android:padding="16dp">

    <!-- Wallet Row -->
    <LinearLayout
        android:id="@+id/rowSelectWallet"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/ic_account_balance_wallet_24"
            app:tint="?attr/bb_expense" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/wallet"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:rotation="180"
            android:src="?attr/actionModeCloseDrawable" />
    </LinearLayout>

    <!-- Amount Row -->
    <LinearLayout
        android:id="@+id/rowAmountRow"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowSelectWallet">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/baseline_savings_24"
            app:tint="?attr/bb_expense" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/amount"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="R XXX"
            android:textColor="?attr/bb_expense"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Note Row -->
    <LinearLayout
        android:id="@+id/rowNoteRow"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowAmountRow">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/ic_edit_note_24"
            app:tint="?attr/bb_expense" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Here the users note will be displayed"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Note Row -->
    <LinearLayout
        android:id="@+id/rowStartRow"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowNoteRow">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/ic_calendar_month_24"
            app:tint="?attr/bb_expense" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/start_date"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Recurrence Row -->
    <LinearLayout
        android:id="@+id/rowRecurrenceRow"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowStartRow">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/ic_autorenew_24"
            app:tint="?attr/bb_expense" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/recurrence"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Recurrence Row -->
    <LinearLayout
        android:id="@+id/rowPhotoRow"
        style="@style/RowStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowRecurrenceRow">

        <ImageView
            style="@style/RowIconStyle"
            android:src="@drawable/ic_add_photo_alternate_24"
            app:tint="?attr/bb_expense" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/picture"
            android:textColor="?attr/bb_primaryText"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="343dp"
        android:layout_height="304dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowPhotoRow"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>